@@ -14,6 +14,14 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Modify handle_client() to process more than one socket command per tick.
+This chops about half a second off time spent in negotiate_connection()
+on local client/server - probably bigger difference for remote servers.
+Also, as code was, if using image caching, no further processing would
+happen after first askface, so this should improve performance notably in
+those cases.
+MSW 2012-06-26
+
 Apply patch #3532595: Restrict account creation, by Eddward DeVilla.
 Nicolas Weeger 2012-06-10
 
